--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Bernar的BLOG</title>
+
+	<link rel="stylesheet" type="text/css" href="css/nav.css">
+</head>
+<body bgcolor="midnight">
+	<!-- 导航条 -->
+	<ul id="nav">
+		<li class="firstLi">
+			<a href="#">首页</a>
+		</li>
+		<li class="firstLi">
+			<a href="#">笔记
+				<ul class="nav2">
+					<li><a href="docs/MySQL学习笔记_01.md">MySQL学习笔记_01</a></li>
+				</ul>
+			</a>
+		</li>
+		<li class="firstLi">
+			<a href="#">关于我</a>
+		</li>
+	</ul>
+	<div style="height: 50px; border: 1px solid red; clear: both;">
+		
+	</div>
+</body>
+</html>
